2 workspace to monitor

--- a/private_dot_config/aerospace/aerospace.toml
+++ b/private_dot_config/aerospace/aerospace.toml
@@ -181,4 +181,5 @@ if.app-id = 'md.obsidian'
 run = "move-node-to-workspace O"
 
 [workspace-to-monitor-force-assignment]
+2 = 'secondary'
 B = 'secondary'
