--- a/private_dot_config/aerospace/aerospace.toml
+++ b/private_dot_config/aerospace/aerospace.toml
@@ -131,6 +131,7 @@ alt-shift-s = 'move-node-to-workspace S'
 alt-shift-b = 'move-node-to-workspace B'
 alt-shift-m = 'move-node-to-workspace M'
 alt-shift-t = 'move-node-to-workspace T'
+alt-shift-d = 'move-node-to-workspace D'
 
 alt-shift-f = 'fullscreen'
 
